<resources>
    <string name="app_name">My Demo App 2017</string>
    <string name="app_about">App About</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>

    <!-- Transition Elements -->
    <string name="transition_random_user_image">Transition RandomUser Image</string>

    <!-- Content Description -->
    <string name="CD_userpicture">User Picture</string>

    <!-- Random User Stuff -->
    <string name="randomuser">Random User</string>
    <string name="randomuser_favorites">Random User Favorites</string>
    <string name="randomuser_about">Random User About</string>
    <string name="ru_gender">Gender</string>
    <string name="ru_gender_other">other</string>
    <string name="ru_name_title">Title name</string>
    <string name="ru_name_first">First name</string>
    <string name="ru_name_last">Last name</string>
    <string name="ru_address">Address</string>
    <string name="ru_location_street">Street</string>
    <string name="ru_location_city">City</string>
    <string name="ru_location_state">State</string>
    <string name="ru_location_postcode">Postcode</string>
    <string name="ru_email">Email</string>
    <string name="ru_login">Login</string>
    <string name="ru_login_username">Username</string>
    <string name="ru_login_password">Password</string>
    <string name="ru_login_salt">Salt</string>
    <string name="ru_login_md5">MD5</string>
    <string name="ru_login_sha1">SHA1</string>
    <string name="ru_login_sha256">SHA256</string>
    <string name="ru_name">Name</string>
    <string name="ru_location">Location</string>
    <string name="ru_dob">DOB</string>
    <string name="ru_registered">Registered</string>
    <string name="ru_phone">Phone</string>
    <string name="ru_homephone">Home</string>
    <string name="ru_call_homephone">Call home</string>
    <string name="ru_cell">Mobile</string>
    <string name="ru_call_cell">Call mobile</string>
    <string name="ru_id_name">Id Name</string>
    <string name="ru_id_value">Id Value</string>
    <string name="ru_picture_large">Picture</string>
    <string name="ru_picture_medium">Picture</string>
    <string name="ru_picture_thumbnail">Picture</string>
    <string name="ru_nat">Nationality</string>
    <string name="ru_choose_number">Choose number</string>

    <!-- Firebase Notification Stuff -->
    <string name="firebase_notification">Firebase Notification</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="fn_send_to_youserlf">Send a notification to yourself using Firebase</string>
    <string name="fn_notification_message">Notification message</string>
    <string name="send">Send</string>
    <string name="fn_all_fields_required">All fields are required</string>
    <string name="fn_wrong_date">Date needs to be, at least, 1 minute from now</string>

    <!-- About -->
    <string name="developer_email">Developer Email</string>
    <string name="libraries">Libraries</string>
    <string name="some_libraries">Some Libraries / API Used</string>
    <string name="randomuser_generator">Random User\nGenerator</string>
    <string name="randomuser_text"><i>\"A free, open-source API for generating random user data. Like Lorem Ipsum, but for people\"</i>\n<a href='https://randomuser.me/'>Random User Generator</a></string>
    <string name="retrofit">Retrofit</string>
    <string name="retrofit_text"><i>\"A type-safe HTTP client for Android and Java\"</i>\n<a href='http://square.github.io/retrofit/'>Retrofit</a></string>
    <string name="greendao">greenDAO</string>
    <string name="greendao_text"><i>\"greenDAO is an open source Android ORM making development for SQLite databases fun again\"</i>\n<a href='http://greenrobot.org/greendao/'>greenDAO</a></string>
    <string name="glide">Glide</string>
    <string name="glide_text"><i>\"An image loading and caching library for Android focused on smooth scrolling\"</i>\n<a href='https://github.com/bumptech/glide'>Glide</a></string>
    <string name="recyclerviewanimators">RecyclesView\nAnimators</string>
    <string name="recyclerviewanimators_text"><i>\"An Android Animation library which easily add itemanimator to RecyclerView items\"</i>\n<a href='https://github.com/wasabeef/recyclerview-animators'>RecyclerView Animator</a></string>
    <string name="stetho">Stetho</string>
    <string name="stetho_text"><i>\"A debug bridge for Android applications\"</i>\n<a href='http://facebook.github.io/stetho/'>Stetho</a></string>
    <string name="databinding">Data Binding</string>
    <string name="databinding_text"><a href='https://developer.android.com/topic/libraries/data-binding/index.html'>Data Binding Library</a></string>

    <!-- Dialogs -->
    <string name="discard_changes">Discard your changes and quit editing?</string>
    <string name="keep_editing">Keep editing</string>
    <string name="discard">Discard</string>

    <!-- Contact Information -->
    <string name="contact_info">Contact Information</string>
    <string name="my_name">Gabriel Guedes</string>
    <string name="my_email_1">gabrielguedes@workflowict.com</string>
    <string name="my_linkedin">https://www.linkedin.com/in/gabriel-salles-guedes-111018a0/</string>
    <string name="my_linkedin_id">gabriel-salles-guedes-111018a0</string>

    <!-- ERRORS -->
    <string name="no_internet">No internet connection</string>
    <string name="communicate">Communicate</string>

</resources>
