<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_randomuser"
            android:icon="@drawable/ic_account_grey600_18dp"
            android:title="@string/randomuser" />
        <item
            android:id="@+id/nav_randomuser_favorites"
            android:icon="@drawable/ic_star_grey600_18dp"
            android:title="@string/randomuser_favorites" />
        <item
            android:id="@+id/nav_randomuser_about"
            android:icon="@drawable/ic_about_grey600_18dp"
            android:title="@string/randomuser_about" />
        <!--<item-->
            <!--android:id="@+id/nav_slideshow"-->
            <!--android:icon="@drawable/ic_menu_slideshow"-->
            <!--android:title="Slideshow" />-->
        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Tools" />-->
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
